tests/lean/593.lean.expected.out
Foo.bar : Nat
bar : Nat
bar : Nat
593.lean:21:7-21:10: error: unknown identifier 'boo'
593.lean:26:7-26:10: error: unknown identifier 'bar'
boo : Nat
Foo.bar : Nat
bar : Nat
